回転・移動をなめらかにした．モデルの移動時に家具のモデルを半透明にした
